server factory unit testing added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "code-runner.executorMap": {
-    "typescript": "ts-node --files --transpile-only"
+    "typescript": "clear | node_modules/.bin/ts-node --files --transpile-only"
   }
 }
