--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "tsc": "tsc",
+    "start": "ts-node src/index.ts",
+    "test": "jest --runInBand --detectOpenHandles --colors --verbose --reporters=default"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -17,10 +19,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
     "@types/node-fetch": "^2.5.10",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.5",
+    "jest-junit": "^12.2.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.6"
